增加厂家信息导出

--- a/web/css/is.css
+++ b/web/css/is.css
@@ -190,6 +190,10 @@
     background-image: url('../images/drop-no.gif') !important;
 }
 
+.icon-down {
+    background-image: url('../images/drop-down.gif') !important;
+}
+
 .icon-commit {
     background-image: url('../images/drop-yes.gif') !important;
 }
